manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-ui
  labels:
    name: hello-world-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-ui
  template:
    metadata:
      labels:
        app: hello-world-ui
    spec:
      containers:
      - name: hello-world-ui
        image: us-central1-docker.pkg.dev/nonprod-app-cluster/nonprod/hw-test-ab12n1o-develop:latest
        resources:
          requests:
            memory: "512Mi"
            cpu: "100m"
          limits:
            memory: "1024Mi"
            cpu: "200m"
      restartPolicy: Always
      imagePullSecrets:
      - name: regcred
