manifests/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-external
spec:
  type: LoadBalancer
  ports:
    - port: 9090
      targetPort: 80 
  selector:
    app: prometheus-server
