manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-fe
  labels:
    service: hello-world-fe
spec:
  selector:
    app: hello-world-fe
  type: LoadBalancer
  ports:
    - port: 3080
      targetPort: 3080
